# spath

./: CHANGELOG.md  Cargo.toml  README.md  licenserc.toml
.github/: semantic.yml
.github/workflows/: ci.yml
spath/: Cargo.toml
spath/src/: error.rs  json.rs  lib.rs  node.rs  path.rs  serde.rs  spath.rs  tests.rs  toml.rs  value.rs
spath/src/json/: mod.rs  tests.rs
spath/src/json/snapshots/: spath__json__tests__rfc_9535_example_conversion-10.snap  spath__json__tests__rfc_9535_example_conversion-2.snap  spath__json__tests__rfc_9535_example_conversion-3.snap  spath__json__tests__rfc_9535_example_conversion-4.snap  spath__json__tests__rfc_9535_example_conversion-5.snap  spath__json__tests__rfc_9535_example_conversion-6.snap  spath__json__tests__rfc_9535_example_conversion-7.snap  spath__json__tests__rfc_9535_example_conversion-9.snap  spath__json__tests__rfc_9535_example_conversion.snap  spath__json__tests__rfc_9535_example_convertion-5.snap  spath__json__tests__rfc_9535_example_convertion-8.snap
spath/src/parser/: ast.rs  error.rs  expr.rs  input.rs  mod.rs  parse.rs  range.rs  runner.rs  selector.rs  token.rs
spath/src/spec/: functions.rs  integer.rs  mod.rs  query.rs  segment.rs
spath/src/spec/function/: builtin.rs  expr.rs  mod.rs  types.rs  value.rs
spath/src/spec/selector/: filter.rs  index.rs  mod.rs  name.rs  slice.rs
spath/src/tests/: mod.rs
spath/src/tests/snapshots/: spath__tests__serde_json_to_variant.snap
spath/src/value/: map.rs  mod.rs  number.rs  variant.rs
spath/testdata/: learn-toml-in-y-minutes.toml
spath/tests/: report.rs  spec.rs  toml.rs
spath/tests/common/: mod.rs
spath/tmp_hack_no_tests/: spec.rs
spath/tmp_hack_no_tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
