# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "spath"
version = "0.0.1"

description = """
SPath is query expressions for semi-structured data. You can use it
as a drop-in replacement for JSONPath, but also for other
semi-structured data formats like TOML or user-defined variants.
"""

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
json = ["dep:serde_json"]

[dependencies]
jiff = { version = "0.1.21" }
logos = { version = "0.15.0" }
num-cmp = { version = "0.1.0" }
ordered-float = { version = "4.6.0", features = ["num-cmp"] }
thiserror = { version = "2.0.8" }
winnow = { version = "0.6.20" }

# optional dependencies
serde_json = { version = "1.0.133", optional = true }

[dev-dependencies]
insta = { version = "1.41.1" }
serde_json = { version = "1.0.133" }

[lints]
workspace = true
