# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "spath"

description = """
SPath is query expressions for semi-structured data. You can use it
as a drop-in replacement for JSONPath, but also for other
semi-structured data formats like TOML or user-defined variants.
"""

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
json = ["dep:serde_json"]
regex = ["dep:regex"]
toml = ["dep:toml"]

[dependencies]
logos = { version = "0.15.0" }
num-cmp = { version = "0.1.0" }
num-traits = { version = "0.2.19" }
thiserror = { version = "2.0.8" }
winnow = { version = "0.7.2" }

# optional dependencies
regex = { version = "1.11.1", optional = true }
serde_json = { version = "1.0.133", optional = true }
toml = { version = "0.8.20", optional = true }

[dev-dependencies]
googletest = { version = "0.13.0" }
insta = { version = "1.41.1", features = ["json"] }
serde_json = { version = "1.0.133" }
spath = { workspace = true, features = ["json", "toml", "regex"] }
toml = { version = "0.8.19" }

[lints]
workspace = true
